<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ted</string>
    <string name="app_name_full">Ted (Text Editor)</string>

    <!--  -->
    <string name="permission_internal">Ted Internal Permission</string>

    <!-- Titles -->
    <string name="title_editor">Ted - %1$s</string>
    <string name="title_editor_dirty">Ted - %1$s *</string>
    <string name="title_editor_readonly">Ted - [%1$s]</string>
    <string name="title_save_as">Ted - Save as ... </string>
    <string name="title_open_recent">Ted - Open Recent</string>
    <string name="title_settings">Ted - Settings </string>
    <string name="title_about">Ted - About ... </string>
    <string name="title_font">Ted - Text Font </string>
    <string name="title_mail">Ted - Email </string>
    <string name="title_sms">Ted - SMS </string>
    <string name="title_rating">Ted - Rating </string>    

    <!-- Config screen strings -->
    <string name="config_cat_display">Display</string>
    <string name="config_cat_other">Other</string>
    <string name="config_cat_save">Saving</string>
    <string name="config_cat_undo">Undo</string>
    <string name="config_cat_search">Search</string>
    <string name="config_cat_misc">Miscellaneous</string>
    <string name="config_title_line_numbers">Show line numbers</string>
    <string name="config_title_word_wrap">Word wrap</string>
    <string name="config_title_font">Change text font</string>
    <string name="config_title_text_size">Text size</string>
    <string name="config_title_color_theme">Color theme</string>
    <string name="config_title_end_of_lines">End of lines</string>
    <string name="config_title_max_recent">Maximum recent files</string>
    <string name="config_title_search_wrap">Search wrap</string>
    <string name="config_title_search_match_case">Search match case</string>
    <string name="config_title_encoding">Encoding</string>
    <string name="config_title_scroll_fling">Fling to scroll faster</string>
    <string name="config_title_allow_undo_stack">Allow undo</string>
    <string name="config_title_max_undo_stack">Maximum undo history</string>
    <string name="config_title_back_to_undo">Use the back button to undo previous modifications</string>
    <string name="config_title_use_home_page">Use a default file</string>
    <string name="config_title_auto_save">Auto Save</string>
    <string name="config_title_auto_save_overwrite">Overwrite existing files</string>
    <string name="config_summary_auto_save">Automatically saves the file being edited when the app goes in background</string>
    <string name="config_summary_line_numbers">Display the line number at the left of the page</string>
    <string name="config_summary_word_wrap">Lines will break in new lines if they are too wide for the screen</string>
    <string name="config_summary_scroll_fling">Uncheck if you have performance issues</string>
    <string name="config_summary_use_home_page">Select a file to open when you launch Ted from your home screen</string>
    <string name="config_summary_auto_save_overwrite_on">Auto save will overwrite existing files</string>
    <string name="config_summary_auto_save_overwrite_off">Auto save will only work with new files</string>
	<string name="config_title_text_font">Text Font</string>
	<string name="config_title_text_style">Text style</string>
	
    <!-- Options Menu in TED -->
    <string name="menu_new">New</string>
    <string name="menu_open">Open</string>
    <string name="menu_open_recent">Recent files</string>
    <string name="menu_save">Save</string>
    <string name="menu_save_as">Save as</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_search">Search</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_email">Email</string>
    <string name="menu_sms">SMS</string>
    <string name="menu_rating">Rating</string>
    
    <!-- Misc UI strings -->
    <string name="ui_save_text">"Do you want to save your document? \nAny unsaved changes will be lost. "</string>
    <string name="ui_save">Save</string>
    <string name="ui_delete">Delete</string>
    <string name="ui_no_save">"Don't save"</string>
    <string name="ui_cancel">Cancel</string>
    <string name="ui_hint_file_name">File name</string>
    <string name="ui_hint_search">Search</string>
    <string name="ui_art_licence">Artistic Licence</string>
    <string name="ui_history">History</string>
    <string name="ui_force_read_only">Open as read only</string>

    <!-- Misc Strings -->
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas porttitor neque semper sem fermentum pretium. Sed pharetra dui faucibus massa malesuada in condimentum mi gravida."</string>
    <string name="art_licence">"All icons for this app were created and belong to the author of the app : Xavier Gouchet (android@xgouchet.fr)."</string>


</resources>